# m365_esp_dashboard

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  attiny-buck.ino  backup.ino  sdkconfig  sdkconfig.old
components/adc/: CMakeLists.txt  adc.c  adc.h
components/buzzer/: CMakeLists.txt  buzzer.c  buzzer.h
components/comm/: comm.c  comm.h
components/display/: CMakeLists.txt  display.c  display.h
components/fs/: CMakeLists.txt  fs.c  fs.h
components/preferences/: CMakeLists.txt  preferences.c  preferences.h
components/proto/: CMakeLists.txt  proto.c  proto.h
components/utils/: CMakeLists.txt  utils.c  utils.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
components/ws2812/: leds.c  leds.h  ws2812_control.h
gui/: gui.psd
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  buzzer.c  buzzer.h  comm.c  comm.h  component.mk  display.h  main.c  proto.c  proto.h  utils.c  utils.h
pcb/: m365_esp32.brd  m365_esp32.sch  m365_led_source.brd  m365_led_source.sch
src/: comm.h  main.c
